# Algorithms

./: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  main.cpp
datastructures/: doublyLinkedList.h  dynamicArray.h  list.h
googletest/: doublyLinkedListTest.cpp  dynamicArrayTest.cpp  listTest.cpp
